Update CallbackServer.java